@@ -49,6 +49,7 @@ endif
 grub_mkimage_SOURCES = util/elf/grub-mkimage.c util/misc.c \
 	util/resolve.c
 grub_mkimage_LDFLAGS = $(LIBLZO)
+util/elf/grub-mkimage.c_DEPENDENCIES = Makefile
 
 # For grub-mkdevicemap.
 grub_mkdevicemap_SOURCES = util/grub-mkdevicemap.c util/misc.c		\
